@@ -5,21 +5,36 @@ local DOMElement = dofile_once("%PATH%elements/DOMElement.lua")
 local Slider = new_class("Slider", function(self, xml_element, data_context)
   super(xml_element, data_context)
   self.binding_target = { type = "binding", target_chain = parser.read_binding_target(xml_element.attr.bind) }
-  self.min = tonumber(xml_element.attr.min) or 0
-  self.max = tonumber(xml_element.attr.max) or 100
-  self.default = tonumber(xml_element.attr.default) or 0
-  self.width = tonumber(xml_element.attr.width) or 100
+  self:ReadAttribute(xml_element, "min", 0)
+  self:ReadAttribute(xml_element, "max", 100)
+  self:ReadAttribute(xml_element, "default", 0)
+  -- self.width = tonumber(xml_element.attr.width) or 100
+  self:ReadAttribute(xml_element, "precision", 0, tonumber)
+  self.min_width = 30
 end, DOMElement)
 
+Slider.default_style = {
+  width = 100
+}
+
+local function get_slider_and_text_width(self)
+  local char_max_width = 6
+  local period_width = 2
+  local text_width = #tostring(self.attr.max) * char_max_width
+  if self.attr.precision > 0 then
+    text_width = text_width + period_width + self.attr.precision * char_max_width
+  end
+  local slider_width = self.style.width
+  return math.max(self.min_width, slider_width), text_width
+end
+
 function Slider:GetInnerAndOuterDimensions(gui, data_context)
-  local slider_width, slider_height = self.width, 8
-  local text = tostring(get_value_from_chain_or_not(data_context, self.binding_target))
-  local text_width, text_height = GuiGetTextDimensions(gui, text)
-  local inner_width = slider_width + text_width + 3
-  local inner_height = slider_height
+  local slider_width, text_width = get_slider_and_text_width(self)
+  local inner_width = slider_width + text_width
+  local inner_height = 8
   local outer_width = inner_width + self.style.padding_left + self.style.padding_right
   local outer_height = inner_height + self.style.padding_top + self.style.padding_bottom
-  outer_width = math.max(outer_width, self.style.width or 0)
+  outer_width = math.max(outer_width, self.style.width or 0, self.min_width)
   outer_height = math.max(outer_height, self.style.height or 0)
   return inner_width, inner_height, outer_width, outer_height
 end
@@ -40,9 +55,12 @@ function Slider:Render(gui, new_id, data_context, layout)
     z = self:GetZ()
   end
   GuiZSetForNextWidget(gui, z)
+  local slider_width, text_width = get_slider_and_text_width(self)
+  slider_width = slider_width - 1 -- To get just a tiny bit of extra room on the right side of text
   local old_value = value
-  local new_value = GuiSlider(gui, new_id(), x - 2 + self.style.padding_left, y + self.style.padding_top, "", value, self.min, self.max, self.default, 1, " ", self.width)
+  local new_value = GuiSlider(gui, new_id(), x - 2 + self.style.padding_left, y + self.style.padding_top, "", value, self.attr.min, self.attr.max, self.attr.default, 1, " ", slider_width)
   if math.abs(new_value - old_value) > 0.001 then
+    -- TODO: Refactor this
     local context = data_context
     for i=1, #self.binding_target.target_chain-1 do
       context = context[self.binding_target.target_chain[i]]
@@ -54,7 +72,7 @@ function Slider:Render(gui, new_id, data_context, layout)
     local c = self.style.color
     GuiColorSetForNextWidget(gui, c.r, c.g, c.b, math.max(c.a, 0.001))
   end
-  GuiText(gui, x + self.width + 3 + self.style.padding_left, y - 1 + self.style.padding_top, tostring(value))
+  GuiText(gui, x + slider_width + 3 + self.style.padding_left, y - 1 + self.style.padding_top, ("%." .. self.attr.precision .. "f"):format(value))
 end
 
 return Slider
